--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -46,7 +47,7 @@
   <body>
     <header>
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Dvir Shiri</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Dvir Shiri</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -55,10 +56,13 @@
         <a class="nav-link" href="https://www.facebook.com/dvir.shiri.1">Facebook page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="{% static 'resume.pdf'%}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
       </li>
       <li class="nav-item">
       </li>
@@ -78,8 +82,11 @@
       </div>
       <p>
         <a href="mailto:dvirshiri.123@gmail.com" class="btn btn-primary my-2">Email me!</a>
-
       </p>
+      <iframe width="420" height="315"
+      src="https://www.youtube.com/embed/CPoKgRx9A8g?autoplay=1">
+      </iframe> 
+      <img class="text-center" src="{% static 'WIN_20200213_03_37_09_Pro.jpg' %}" height = "250" width="300"></img>
     </div>
   </section>
   <div class="album py-5 bg-light">
