Entered Black Jack game project

--- a/projects/templates/project/projects.html
+++ b/projects/templates/project/projects.html
@@ -75,6 +75,7 @@
   <div class="container">
       <h1 class="text-center pt-5" style="font-family:verdana;"> Welcome to Dvir's project section</h1>
       <br />
+      <a href="{% static 'Black Jack.exe' %}" class="btn btn-primary my-2">Download Black Jack game</a>
       <br />
       <h2>projects: </h2>
       <hr />
